2018-04-01 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: bumping version to 2.3.6

2018-01-15 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/install.xml: fixed broken links

2017-11-11 Massimo Manghi <mxmanghi@apache.org>
    * : releasing as 2.3.5

2017-11-06 Massimo Manghi <mxmanghi@apache.org>
    * tests/virtualhost.test,channel.test: fixed <VirtualHost ...>
    stanzas that caused these tests to fail in certain cases because
    the Host: header wasn't interpreted correctly

2017-10-29 Massimo Manghi <mxmanghi@apache.org>
    * win/: removing obsolete directory for windows support
    * rivet/init.tcl: recreated from init.tcl.in
    * VERSION: new version 2.3.5

2017-10-24 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio_Mysql.tcl: handling special field NULL

2017-10-13 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: Following Jeff Lawson's suggestion we check
    if init.tcl is loaded from within mod_rivet. If we're not running
    from it we don't divert the [exit] command 
    * tcl/rivet-tcl/redirect.tcl: now handling generic boolean arguments
    or any integer > 0 (as for the HTTP status codes)
    * src/librivet/rivetWWW.c: fixed subtle buffer overflow
    with sprintfn

2017-08-08 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: implementing check on post_config
    hook calling Rivet_InitHandler. This avoids the module
    initialization to run twice but only on the second time
    the hook is called
    * configure.ac: bumping version number to 2.3.5

2017-08-03 Massimo Manghi <mxmanghi@apache.org>
    * .: releasing as 2.3.4

2017-07-27 Massimo Manghi <mxmanghi@apache.org>
    * src/librivet/rivetWWW.c: Doubling the size of chunks 
    allocated for the buffer in Rivet_EscapeSgmlCharsCmd (6 chars) 
    and setting the chunk size in Rivet_EscapeStringCmd back to 
    the original size (3 chars) (closes bug #61353)
    
2017-07-20 Massimo Manghi <mxmanghi@apache.org>