@@ -1,0 +1,31 @@
+Makefile.in
+doc/Makefile.in
+src/Makefile.in
+aclocal.m4
+autom4te.cache/
+configure
+Makefile
+_configs.sed
+config.h
+config.h.in
+config.log
+config.status
+rivet_config.h
+doc/Makefile
+doc/convert_examples.tcl
+doc/graphics
+doc/html/
+libtool
+src/Makefile
+src/librivet/.deps/
+src/mod_rivet_ng/.deps/
+src/parser/.deps/
+src/request/.deps/
+stamp-h1
+*~
+*.libs/
+*.dirstamp
+*.lo
+*.la
+*.swp
+tags
