@@ -1,3 +1,12 @@
+2018-11-19 Massimo Manghi <mxmanghi@apache.org>
+    * VERSION,configure.ac: bumping version to 2.3.7
+    * src/rivetcmds/rivetCore.c: fix wrong discrimination between
+    ::rivet::var_qs,::rivet::var_post that lead to overlapping
+    functionalities
+    * src/librivet/rivetPkgInit.c: merging from 3.0 new namespace
+    determination that makes librivet independent from the module
+    globals
+
 2018-04-01 Massimo Manghi <mxmanghi@apache.org>
     * VERSION,configure.ac: bumping version to 2.3.6
 
